--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <section>
       <div id="primoLink">
         <p>FEATURED IN:<br/>
-        fresh cranberries recipes that go beyond souce</p> <!--questo dovrebbe essere un link-->
+        <a href="http://fresh.com"> fresh cranberries recipes that go beyond souce </a>
+    </p> <!--questo dovrebbe essere un link-->
       </div>
     </section>
 
@@ -94,7 +95,9 @@
             the last of the flour...
           </p>
         </ol>
-        <p>Read more on Simply recipes</p> <!--questo dovrebbe essere un link-->
+        <p>Read more on 
+            <a href="http://recipies.com">Simply recipes</a>
+        </p> <!--questo dovrebbe essere un link-->
       </div>
     </section>
   </body>
